--- a/HtmlEditorInBlazor/HtmlEditorInBlazor.csproj
+++ b/HtmlEditorInBlazor/HtmlEditorInBlazor.csproj
@@ -5,11 +5,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="DevExpress.Blazor" Version="22.2.6" />
-    <PackageReference Include="DevExtreme.AspNet.Core" Version="22.2.6" />
+    <PackageReference Include="DevExpress.Blazor" Version="23.1.3" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\JSWidgetsRCL\JSWidgetsRCL.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Data\sample.html">
